[add] Section 7 Responsive

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -206,13 +206,16 @@
     </div>
 
     <button class="transparent black section-7">{{"home.section-7.button-1" | translate}}</button>
+    <div class="crane-container">
+      <div class="crane"></div>
+      <div class="section-7 crane-2 --mobile"></div>
+    </div>
 
     <div class="section-7 right-text">
       <h3 class="section-7 body">{{"home.section-7.body-3" | translate}}</h3>
       <button class="golden section-7">{{"home.section-7.button-2" | translate}}</button>
     </div>
 
-    <div class="crane"></div>
   </div>
 </div>
 
