--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -90,7 +90,7 @@
 
 </div>
 
-<div class="section black-section section-4" navTheme="light">
+<div class="section black-section section-4" navTheme="dark">
   <h2 class="black title section-4--mobile">{{ "home.section-4.title" | translate }}</h2>
   <div class="header-image-container">
     <img
@@ -216,6 +216,23 @@
       <button class="golden section-7">{{"home.section-7.button-2" | translate}}</button>
     </div>
 
+  </div>
+</div>
+
+<div class="section section-8" navTheme="light">
+  <div class="section-8 container">
+    <div class="section-8 sub-section">
+      <div class="top-subsection">
+        <img class="image section-8 logo" ngSrc="/img/rings.png" width="113" height="113" alt="Logo">
+        <h3 class="section-8 title">{{"home.section-8.title" | translate}}</h3>
+      </div>
+      <div class="bottom-subsection">
+        <p class="sub black section-8 body">{{"home.section-8.body" | translate}}</p>
+        <button class="golden section-8">{{"home.section-8.button" | translate}}</button>
+      </div>
+
+    </div>
+    <div class="section-8 sub-section desktop"></div>
   </div>
 </div>
 
