[add] Section 8 Responsive

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -226,6 +226,13 @@
         <img class="image section-8 logo" ngSrc="/img/rings.png" width="113" height="113" alt="Logo">
         <h3 class="section-8 title">{{"home.section-8.title" | translate}}</h3>
       </div>
+      <img
+        class="image section-8 --mobile"
+        ngSrc="/img/section8/img-5.jpg"
+        width="286"
+        height="304"
+        alt="Platillo Nikkei"
+      >
       <div class="bottom-subsection">
         <p class="sub black section-8 body">{{"home.section-8.body" | translate}}</p>
         <button class="golden section-8">{{"home.section-8.button" | translate}}</button>
