--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,9 +91,19 @@ button.transparent.black{
   color: var(--white-500);
 }
 
+button.transparent.white-border{
+  border: 1px solid var(--white-500);
+  color: var(--white-500);
+}
+
 button.transparent:hover{
   background: var(--gold-700);
   color: var(--white-500);
+}
+
+button.transparent.white-border:hover{
+  background: var(--white-500);
+  color: var(--black-600);
 }
 
 button.transparent.black:hover{
