--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,1 +1,15 @@
-<p>footer works!</p>
+<div class="footer">
+  <div class="footer-logo">
+    <img
+      ngSrc="/img/footer/trace.svg"
+      width="220"
+      height="125"
+      alt="Footer Logo"
+    >
+  </div>
+  <div class="text-buttons">
+    <p class="redirect">About</p>
+    <p class="redirect">Contact</p>
+    <p class="redirect">Menu</p>
+  </div>
+</div>
