--- a/src/app/layout/footer/footer.scss
+++ b/src/app/layout/footer/footer.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 48px;
 }
 
 .text-buttons{
@@ -29,4 +30,193 @@
 
 .redirect:hover{
   color: var(--gold-500);
+}
+
+.svgs{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 19px;
+  margin-top: 43px;
+}
+
+.svg-container{
+  border: 1px solid var(--white-500);
+  border-radius: 50%;
+  height: 35px;
+  width: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+svg{
+  height: 20px;
+  width: 20px;
+  fill: var(--white-500);
+}
+
+.svg-container:hover{
+  border: 1px solid var(--gold-500);
+}
+.svg-container:hover svg{
+  fill: var(--gold-500);
+}
+
+.footer-columns{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-around;
+  margin-top: 85px;
+  border-top: 1px solid var(--gold-500);
+  border-bottom: 1px solid var(--gold-500);
+  padding-top: 78px;
+  padding-bottom: 85px;
+  position: relative;
+}
+
+.footer-column{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0;
+}
+
+.footer-column-title{
+  color: var(--gold-400);
+  font-family: Lato, sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 24px;
+}
+
+.footer-column-item{
+  color: var(--white-500);
+  font-family: Lato, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 6px;
+}
+
+.a-buttons{
+  margin-top: 50px;
+}
+
+a{
+  color: var(--white-500);
+  font-family: Lato, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-skip-ink: auto;
+  text-decoration-thickness: auto;
+  text-underline-offset: auto;
+  text-underline-position: from-font;
+  cursor: pointer;
+}
+
+a:hover {
+  color: var(--gold-500);
+}
+
+.first-column{
+  max-width: 235px;
+}
+
+.second-column{
+  max-width: 201px;
+}
+
+.third-column{
+  max-width: 249px;
+}
+
+.fourth-column{
+  max-width: 265px;
+}
+
+button.golden{
+  margin-top: 30px;
+  padding: 14px 35px;
+}
+
+.back-to-top{
+  position: absolute;
+  right: 0;
+  bottom: 18px;
+  margin-right: 74px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+
+  span{
+    color: var(--white-500);
+    font-family: Lato, sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    margin-right: 24px;
+    text-transform: uppercase;
+  }
+  svg{
+    height: 24px;
+    width: 24px;
+    path{
+      fill: var(--white-500);
+    }
+  }
+}
+
+.back-to-top:hover span, .back-to-top:hover svg{
+  color: var(--gold-500);
+  path{
+    fill: var(--gold-500);
+  }
+}
+
+.footer-bottom{
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  width: 100%;
+
+  p{
+    color: var(--white-500);
+    font-family: Lato, sans-serif;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    margin: 0;
+  }
+
+  > p {
+    grid-column: 2;
+    justify-self: center;
+    text-align: center;
+  }
+
+  .privacy-terms{
+    grid-column: 3;
+    justify-self: end;
+    margin-right: 80px;
+
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    text-align: right;
+  }
 }
