--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -243,7 +243,7 @@
   </div>
 </div>
 
-<div class="section section-9" navTheme="light">
+<div class="section section-9" navTheme="dark">
   <h3 class="section-9 title">{{"home.section-9.title" | translate}}</h3>
   <button class="section-9 transparent white-border">{{"home.section-9.button" | translate}}</button>
 </div>
