--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -67,7 +67,7 @@
   </div>
 
   <div class="footer-bottom">
-    <p>Escazú, Costa Rica</p>
+    <p class="desktop">Escazú, Costa Rica</p>
     <div class="privacy-terms">
       <p>{{ "footer.privacy-policy" | translate }}</p>
       <p>{{ "footer.terms-and-conditions" | translate }}</p>
