--- a/src/app/layout/footer/footer.scss
+++ b/src/app/layout/footer/footer.scss
@@ -220,3 +220,100 @@ button.golden{
     text-align: right;
   }
 }
+
+@media (max-width: 900px) {
+  .footer-columns{
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 27px;
+    padding-top: 37px;
+    padding-bottom: 97px;
+  }
+
+  .footer-column{
+    align-items: flex-start;
+    text-align: left;
+    margin-left: 55px;
+  }
+
+  .footer-column-title{
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+  .footer-column-item{
+    text-align: left;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
+  .first-column {
+    max-width: 166px;
+  }
+
+  .second-column {
+    max-width: 151px;
+  }
+
+  .third-column {
+    max-width: 187px;
+  }
+
+  .fourth-column {
+    max-width: 175px;
+  }
+
+  .a-buttons{
+    display:none;
+  }
+
+  .footer-bottom{
+    justify-self: end;
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    gap: 20px;
+    margin: 0;
+    text-align: right;
+    justify-content: space-between;
+    padding: 12px 0;
+
+    .privacy-terms{
+      justify-self: end;
+      display: flex;
+      width: 100%;
+      flex-direction: row;
+      margin: 0 18px;
+      gap: 20px;
+      text-align: right;
+      justify-content: space-between;
+    }
+
+  }
+
+  .desktop{
+    display: none;
+  }
+
+  button.golden{
+    padding: 16px 30px;
+    font-size: 12px;
+  }
+
+  .back-to-top{
+    right: auto;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
+    bottom: 36px;
+    margin: 30px 0 0 0;
+
+    span{
+      margin-right: 10px;
+    }
+  }
+
+}
