--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div class="section grid-section" navTheme="dark">
+<div id="about" class="section grid-section" navTheme="dark">
   <div class="grid-lines" aria-hidden="true">
     <div class="line line-top"></div>
     <div class="line line-bottom"></div>
@@ -135,7 +135,7 @@
   </div>
 </div>
 
-<div class="section black-section section-6" navTheme="light">
+<div id="contact" class="section black-section section-6" navTheme="light">
   <div class="sub-section">
     <div class="column">
       <h2 class="black title section-6 italic desktop" style="margin-bottom:55px">{{"home.section-6.title-1" | translate}}</h2>
