--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -439,6 +439,10 @@ p.sub.black.body.section-7{
   max-width: 548px;
 }
 
+button.section-7{
+  z-index: 500;
+}
+
 button.transparent.section-7{
   margin-top:44px ;
 }
