Improves UI and UX across the application
Enhances the user interface and experience by:

- Moving image carousel indicators to the bottom center and adjusting styles.
- Reducing the navigation offset for smoother scrolling.
- Making the footer logo clickable to navigate to home.
- Improving navbar responsiveness and styles.
- Adjusting styles of home page and responsiveness.
- Changing image carousel interval.

--- a/src/app/core/components/image-carousel/image-carousel.scss
+++ b/src/app/core/components/image-carousel/image-carousel.scss
@@ -33,13 +33,15 @@
 
 .indicators {
   position: absolute;
-  right: 16px;
-  top: 50%;
+  width: 100%;
+  text-align: center;
+  bottom: 24px;
   transform: translateY(-50%);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 10px;
   z-index: 2;
+  justify-content: center;
 }
 
 .dot {
