--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
-  <div class="footer-logo">
+  <div class="footer-logo" routerLink="/">
     <img
       ngSrc="/img/footer/trace.svg"
       width="220"
@@ -35,7 +35,7 @@
     </div>
   </div>
 
-  <div class="footer-columns">
+  <div class="footer-columns" id="contact">
     <div class="footer-column first-column">
       <h3 class="footer-column-title">{{ "footer.address" | translate }}</h3>
       <p class="footer-column-item">San José, Escazú, San Rafael, Avenida Escazú, Locales C122 & C123</p>
