--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -58,7 +58,7 @@
     { src: '/img/section3/img-6.jpg', alt: 'Nigiri de salmón' }
   ]"
           [autoplay]="true"
-          [interval]="4000"
+          [interval]="3000"
           [pauseOnHover]="true"
           [loop]="true"
           [height]="35">
@@ -135,7 +135,7 @@
   </div>
 </div>
 
-<div id="contact" class="section black-section section-6" navTheme="light">
+<div class="section black-section section-6" navTheme="light">
   <div class="sub-section">
     <div class="column">
       <h2 class="black title section-6 italic desktop" style="margin-bottom:55px">{{"home.section-6.title-1" | translate}}</h2>
